--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -11,13 +11,15 @@
 @import './dashboard.scss';
 @import './messageAlert.scss';
 @import './projectDataList.scss';
-@import './projectDataCreate.scss';
+@import './projectDataRegistration.scss';
 @import './sidebar.scss';
-@import './personnelExpensesList.scss';
-@import './personnelExpenseCreate.scss';
+@import './employeeExpensesList.scss';
+@import './employeeExpensesRegistration.scss';
 @import './notFound.scss';
 @import './planning.scss';
 @import './tablePlanning.scss';
-@import './costofSalesRegistration.scss';
+@import './costOfSalesRegistration.scss';
+@import './costOfSalesList.scss';
 @import './expensesRegistration.scss';
+@import './expensesList.scss';
 
